--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@vue/cli-service": "~4.3.0",
+	"asd": "asd",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
